[package]
name = "muzzman-module-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
overflow-checks = false
debug = false
strip = "debuginfo"
lto = true
panic = "unwind"
debug-assertions = false
codegen-units = 128

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.17", features = ["std"] }
# muzzman-lib = "0.3.2" 
muzzman-lib = {path = "../../muzzman-lib"}
rustls = "0.20.7"
url = "2.3.1"
webpki = "0.22.0"
webpki-roots = "0.22.6"
